--- a/gb/20/12/2/n12590079.md
+++ b/gb/20/12/2/n12590079.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fflpli3993/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fflpli3993/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fflpli3993/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fflpli3993/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fflpli3993/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fflpli3993/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fflpli3993/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fflpli3993/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fflpli3993/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fflpli3993/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fflpli3993/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fflpli3993/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fflpli3993/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fflpli3993/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fflpli3993/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>在中小学阶段如何学习</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/05/1307121112211528-e1494903356889.jpg" />
 <h6>孩子的学习和成长，需要“家、校、生”三位一体，合成一股力，朝着一个方向和一个目标努力。(fotolia)
 </h6>
 <hr>
-<p>【大纪元2020年12月02日讯】（大纪元记者李路明澳洲悉尼编译报导）儿童和青少年是通过观察、聆听、探索、实验和提问来<ahref="https://github.com/fflpli3993/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>的。一旦<ahref="https://github.com/fflpli3993/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>开始<ahref="https://github.com/fflpli3993/djy/blob/master/gb/tag/%E4%B8%8A%E5%AD%A6.md#1">上学</a>，那么<ahref="https://github.com/fflpli3993/djy/blob/master/gb/tag/%E5%85%B4%E8%B6%A3.md#1">兴趣</a>、积极性和对<ahref="https://github.com/fflpli3993/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>的投入就很重要。如果他们理解了自己为什么要学习，这也会对他们有所帮助。随着孩子的长大，他更乐于承担更多的学习责任，并更多地参与有关学习和组织活动的决策。</p>
-<p>您在<ahref="https://github.com/fflpli3993/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>学习中扮演重要的角色，即使您认为自己对教和学没什么概念，但多年来孩子一直在向您学习。当您的孩子上小学然后再读中学时，您自己时常保持积极的态度，对孩子也会产生积极的正面影响。</p>
+<p>【大纪元2020年12月02日讯】（大纪元记者李路明澳洲悉尼编译报导）儿童和青少年是通过观察、聆听、探索、实验和提问来<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>的。一旦<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>开始<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%8A%E5%AD%A6.md#1">上学</a>，那么<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B4%E8%B6%A3.md#1">兴趣</a>、积极性和对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>的投入就很重要。如果他们理解了自己为什么要学习，这也会对他们有所帮助。随着孩子的长大，他更乐于承担更多的学习责任，并更多地参与有关学习和组织活动的决策。</p>
+<p>您在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>学习中扮演重要的角色，即使您认为自己对教和学没什么概念，但多年来孩子一直在向您学习。当您的孩子上小学然后再读中学时，您自己时常保持积极的态度，对孩子也会产生积极的正面影响。</p>
 <p><strong>小学阶段早期学习</strong></p>
 <p>孩子们通过不同的方式学习，有些是通过看，有些通过听，有些通过阅读，有些通过动手实践。在这个阶段，孩子们仍然通过游戏来学习。大量非结构化的自由游戏，有助于平衡孩子们在学校的的正规课程。它还使孩子们有机会在遵循学校的日常安排和规定的同时放松身心。</p>
 <p>孩子们还可以通过许多不同的方式用实物来学习。当您的孩子使用各种材料进行实验、探索和创作时，他们会学到在没有固定答案或“正确”答案的情况下如何解决问题。</p>
@@ -16,7 +16,7 @@
 <p><strong>小学阶段的学习技巧</strong></p>
 <p>以下是一些实用的技巧，可帮助小学学龄的孩子：</p>
 <ul>
-<li>通过谈论学校，显示出您对孩子做的事情和学习很感<ahref="https://github.com/fflpli3993/djy/blob/master/gb/tag/%E5%85%B4%E8%B6%A3.md#1">兴趣</a>。</li>
+<li>通过谈论学校，显示出您对孩子做的事情和学习很感<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B4%E8%B6%A3.md#1">兴趣</a>。</li>
 <li>一起玩押韵游戏、字母游戏以及形状和数字游戏，并练习在游戏活动中学习轮流替换的概念。</li>
 <li>使用简单的语言玩单词和词义的游戏，例如，可以为单词的音节打拍子或玩单词联想游戏。</li>
 <li>即使孩子可以自己看书了，也要继续给孩子读书。</li>
@@ -53,48 +53,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/12/7/8/n3630479.md#1">阅读经典乐趣多</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/4/6/n12006625.md#1">五大实用策略 激励孩子学习兴趣</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/4/26/n12062614.md#1">成就顶尖人才 要的不只是名牌大学</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/6/15/n12187641.md#1">追求高分之际 我们是否忘了教育真正初衷？</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/7/2/n12226566.md#1">10-12年级学习目标和辅导建议</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/8/14/n12330812.md#1">五个技巧为学习加速</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/10/1/n12444233.md#1">父母选择家庭教育 培养出三位“神童”</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/10/15/n12476596.md#1">【纪元专栏】电脑时代 孩子为何要掌握书写能力？</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/12/2/n12590004.md#1">帮6-10岁孩子提高阅读理解能力的六个方法</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/27/n12578947.md#1">远程教学效果不佳 学生学习进度落后数月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/7/8/n3630479.md#1">阅读经典乐趣多</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/4/6/n12006625.md#1">五大实用策略 激励孩子学习兴趣</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/4/26/n12062614.md#1">成就顶尖人才 要的不只是名牌大学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/6/15/n12187641.md#1">追求高分之际 我们是否忘了教育真正初衷？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/2/n12226566.md#1">10-12年级学习目标和辅导建议</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/14/n12330812.md#1">五个技巧为学习加速</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/1/n12444233.md#1">父母选择家庭教育 培养出三位“神童”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/15/n12476596.md#1">【纪元专栏】电脑时代 孩子为何要掌握书写能力？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604124.md#1">可在家进行的儿童趣味学习活动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099159.md#1" target="_blank">郑兢业：人吃与吃人（六）</a></li><li><a href="https://github.com/fflpli3993/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/10/n11375488.md#1" target="_blank">冤狱11年半 前大陆律师堂堂正正反迫害 ?</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099688.md#1" target="_blank">共产暴政录：上山下乡运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/26/n12576644.md#1">木星与土星在冬至相合 800年来罕见天象</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/25/n12575381.md#1">救命之恩 “新世纪影视”演员感恩李洪志大师（中）</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/2/n12519137.md#1">三岁男童找到前世子女  胎记前世记忆揭秘</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/7/13/n12253402.md#1">何以区分灵魂伴侣或生活伴侣？</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12585066.md#1">川普是天选之人？ 专家解析他与圣经的关连</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/12/1/n12587397.md#1">【有冇搞错】美国大选 决定人类未来之战</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12585720.md#1">【重播】密歇根就大选计票问题举行听证会</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/12/1/n12588926.md#1">【新闻看点】4大惊人舞弊 亚利桑那强认证遭批</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12585111.md#1">【大选更新11·30】亚利桑那30万无资格选票</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12586484.md#1">宾州议员正式提决议 要求撤销大选认证</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/29/n12583893.md#1">数据专家：FBI索要选举欺诈证据</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/29/n12583941.md#1">范冰冰等明星遭点名 中共官媒封杀艺人引热议</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12586369.md#1">养生餐单曝光网民热捧 刘德华的回答很实在</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/29/n12583592.md#1">曝邓超减肥要她作陪 孙俪甜蜜自嘲顾影自怜</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12586006.md#1">黄晓明自曝常遭导演拒绝 拍新片惊传心脏不适</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12584882.md#1">林志玲甜美托腮迎46岁：谢谢大家的祝福</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/29/n12582680.md#1">喝养乐多铝箔纸要戳洞或撕开？ 业者告诉你</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/25/n12574800.md#1">大白菜防癌、解毒又助消化 挑选留意1重点</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12585066.md#1">川普是天选之人？ 专家解析他与圣经的关连</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12584820.md#1">火球在日本夜空中爆炸 像满月一样亮</a></li>
-<li><a href="https://github.com/fflpli3993/djy/blob/master/gb/20/11/30/n12586020.md#1">7种迹象是缺蛋白质 教你三餐补充 强肌抗病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fflpli3993/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fflpli3993/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/2/n12590079.htm">在中小学阶段如何学习</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/2/n12590079.htm">在中小学阶段如何学习</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fflpli3993/djy/blob/master/gb/20/12/2/n12590079.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fflpli3993/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fflpli3993/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fflpli3993/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fflpli3993/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fflpli3993/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/12/2/n12590079.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
